--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-
-        
+    <!-- logo e sfondo header -->
+    <header> 
+        <img src="./img/logo.svg" alt="logo pagina" id="logo">
     </header>
 
+    <!-- inizio main -->
+    <main>
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
 
-    <main></main>
+
+
+    </main>
     
 
     <footer></footer>
