--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <!-- link-->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sonsie+One&display=swap" rel="stylesheet">
 
     <title>Document</title>
 </head>
