--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <!-- Titolo più dati articolo -->
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <div id="dati-articolo">Scritto da</span> <span id="autore-articolo">The Booleaner</div>
-        <div id="data-articolo">il 10/10/2020</div>
+        <div class="dati articolo">Scritto da <span id="autore-articolo">The Booleaner</span></div>
+        <div class="data articolo">il 10/10/2020</div>
 
         <!-- immagini articolo   -->
         <div class="immagini-tim">
