validation-html-css-ok

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          </div>
 
             <!-- punti tabella -->
-            <div class="container"></div>
+            <div class="container">
 
                 <ul>
                     <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit</li>
