--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="The Booleaner">
 
     <!-- link-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-due.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sonsie+One&display=swap" rel="stylesheet">
